<!--
  Copyright 2017 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">EmerComp</string>
    <string name="get_location">Get Location</string>
    <string name="android_image">Android Image</string>
    <string name="textview_hint">Press -> Get Location to get current location
    </string>
    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f
 \n Timestamp: %3$tr"</string>
    <string name="address_text">"Current Location: %1$s \n Time: %2$tr"</string>
    <string name="loading">Loading...</string>
    <string name="no_address_found">No Address Found!!!</string>
    <string name="invalid_lat_long_used">Invalid Latitude or Longitude Used!!!</string>
    <string name="service_not_available">Service Unavailable!!!</string>
    <string name="no_location">Location Not Available</string>
    <string name="voice_textview">Voice input will be displayed here....</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="choose_contacts">Choose Contacts</string>
    <string name="display_contacts">Display Contacts</string>
    <string name="textview_name">TextView</string>
    <string name="textview_number">TextView</string>
    <string name="compass_hint">Compass</string>
    <string name="voice_input">Voice Input</string>

</resources>
