<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2017 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.android.emercomp_app.MainActivity"
    >


    <ImageView
        android:id="@+id/imageview_android"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="@dimen/margin"
        android:contentDescription="@string/android_image"
        app:layout_constraintBottom_toTopOf="@+id/voiceToText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/binghamton_logo" />

    <!--Display user voice in this Textview-->
    <TextView
        android:id="@+id/voiceToText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:gravity="center"
        android:text="@string/voice_textview"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textview_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_android"/>


    <TextView
        android:id="@+id/textview_location"
        android:layout_width="298dp"
        android:layout_height="90dp"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:text="@string/textview_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voiceToText" />

    <!-- Create another textview for Voice input-->

    <android.support.constraint.Guideline
        android:id="@+id/guide_image_portrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />


    <Button
        android:id="@+id/button_location"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location"
        app:layout_constraintTop_toBottomOf="@+id/textview_location"
        app:layout_constraintBottom_toTopOf="@+id/emergency_contacts"
        app:layout_constraintEnd_toStartOf="@+id/btnVoice"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        />

    <Button
        android:id="@+id/btnVoice"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getVoiceInput"
        android:text="@string/voice_input"
        app:layout_constraintTop_toBottomOf="@+id/textview_location"
        app:layout_constraintBottom_toTopOf="@+id/compass_button"
        app:layout_constraintStart_toEndOf="@+id/button_location"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        />

    <Button
        android:id="@+id/emergency_contacts"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startEmergencyContactActivity"
        android:text="@string/emergency_contacts"
        app:layout_constraintEnd_toStartOf="@+id/compass_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        />

    <Button
        android:id="@+id/compass_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compass_hint"
        app:layout_constraintStart_toEndOf="@+id/emergency_contacts"
        app:layout_constraintTop_toBottomOf="@+id/btnVoice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>